objects/Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Reservation__c</fullName>
        <label>Date Of Reservation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <formula>Price__c  -  (  Price__c  *  Discount__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reservation</label>
    <nameField>
        <label>Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>